This file describes changes in the AutoDoc package.

2016.12.04:
  - Revise and officially document the `entities` option for AutoDoc()

2016.11.26:
  - Use english month names on title pages
  - Ignore empty dependency lists in PackageInfo.g files
  - Better error message when .six file is not available

2016.03.08:
  - Fix the "empty index" workaround from the previous release

2016.03.04:
  - Improved the manual.
  - AutoDoc can now be instructed to invoke GAPDoc in such a way that links
    in the generated documentation to the GAP reference manual use relative
    paths.
  - Also scan for .autodoc files (Issue #104)
  - Workaround a problem with GAPDoc where an empty index could lead to an error.
  - Allow entities in chapter and section titles.
  - Fix a bug where the indentation for code blocks was not preserved.

2016.02.24:
  - Again improved the error messages produced by the parser.
  - Document worksheets (and fix them -- the previous release broke them).
  - Removed the @URL documentation comment command.
  - Add current directory to default list of directories which are scanned
    for *.{g,gi,gd} files containing documentation.
  - Fixed various typos and other mistakes in the documentation.
  - Make it possible to tell AutoDoc to build manuals with relative paths
    (issue #103).

2016.02.16:
  - AutoDoc does not anymore produce an error when invoked on a new project
    which has no documentation yet (issue #65)
  - Various errors in the parser now produce much better error messages,
    with information in which file and line the error occurred, and what
    the error is (issue #89)
  - Files generated by AutoDoc for chapters as well as the "main" file
    now have names starting with an underscore, to make it easy to
    distinguish generated files from those maintained by hand.
  - Removed the old "Declare*WithDoc" API. Any packages still using it
    must upgrade to use documentation comments.

2016.01.31: