@@ -1,5 +1,8 @@
 This file describes changes in the AutoDoc package.
 
+YYYY.MM.DD
+  - Correct some spelling mistakes in the manual
+
 2016.12.04:
   - Revise and officially document the `entities` option for AutoDoc()
 
